[gd_scene load_steps=4 format=3 uid="uid://m56hw33ngc5r"]

[ext_resource type="Texture2D" uid="uid://b7lvcwis7yke7" path="res://icon.svg" id="1_kg5i0"]
[ext_resource type="Script" path="res://movement.gd" id="2_8kspe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hladd"]
size = Vector2(120, 120)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("2_8kspe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hladd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kg5i0")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpHeightTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
